--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -23,8 +23,8 @@ jobs:
         pip install coverage
         cd tests
         curl -o test.mp3 https://www.kozco.com/tech/piano2-CoolEdit.mp3
-        echo HEADERS_AUTH > headers_auth.json
-        echo TEST_CFG > test.cfg
+        cat <<< "$HEADERS_AUTH" > headers_auth.json
+        cat <<< "$TEST_CFG" > test.cfg
         coverage run --source=../ytmusicapi -m unittest test.py
         coverage xml
     - name: Upload coverage to Codecov
