--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -22,11 +22,13 @@ jobs:
       run: |
         pip install .
         pip install coverage
+        ls
         cd tests
         curl -o test.mp3 https://www.kozco.com/tech/piano2-CoolEdit.mp3
         cat <<< "$HEADERS_AUTH" > headers_auth.json
         cat <<< "$TEST_CFG" > test.cfg
-        coverage run --include=../ytmusicapi -m unittest test.py
+        ls
+        coverage run --source=../ytmusicapi -m unittest test.py
         coverage xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
